# Habitify

./: .bazelrc  .gitignore  .gitmodules  BUILD  CMakeLists.txt  README.md  WORKSPACE
.github/workflows/: bazel_build.yml  bazel_ci.yml  codeql.yml
bazel/: glfw.BUILD  imgui.BUILD
cmake/: config.cmake  imgui_glfw.cmake
cmake_out/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Habitify.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  event_bus.vcxproj  event_bus.vcxproj.filters  habitify.vcxproj  habitify.vcxproj.filters  habitify_core.vcxproj  habitify_core.vcxproj.filters  habitify_frontend.vcxproj  habitify_frontend.vcxproj.filters
cmake_out/.cmake/api/v1/reply/: cache-v2-f99937da25b78b37395b.json  cmakeFiles-v1-c0beacbcd3bdf0bccf13.json  codemodel-v2-c4157ed870642c447e0b.json  index-2023-10-01T15-45-09-0693.json  target-ALL_BUILD-Release-219dc0491092f542da97.json  target-ZERO_CHECK-RelWithDebInfo-17b241794f3a2457a44e.json  target-event_bus-Debug-eae032e8f51032ed0e21.json  target-event_bus-MinSizeRel-ca574233b5b7ebeda83d.json  target-event_bus-RelWithDebInfo-fee3bbbdedb1b7241b94.json  target-event_bus-Release-71bbef793674f3ca6ea9.json  target-habitify-Debug-ae646263965649124e5a.json  target-habitify-MinSizeRel-56b32e82d66d04d34bb2.json  target-habitify-RelWithDebInfo-7a0c64cd44bbfc2b4355.json  target-habitify-Release-8362eee1f59306d4a416.json  target-habitify_core-Debug-10f4924de78ee83e7436.json  target-habitify_core-MinSizeRel-31cf20b705d08095dc50.json  target-habitify_core-RelWithDebInfo-a1ef47a25565ec3ad982.json  target-habitify_core-Release-9208e3695b965ae47f25.json  target-habitify_frontend-Debug-92799f940d0315bd9716.json  target-habitify_frontend-MinSizeRel-3612563e9301abcebe13.json  target-habitify_frontend-RelWithDebInfo-08b30441af02d547b15a.json  target-habitify_frontend-Release-21ceaf08c51163c6410a.json  toolchains-v1-e53b71f29f3e8d08de38.json
src/console/: console.h
src/core/: BUILD  application.cpp  application.h  data_bus.cpp  data_bus.h  entry_point.cpp  error_handler.h  imgui.ini  imgui_frontend.cpp  imgui_frontend.h  layer.h  layer_stack.cpp  layer_stack.h
src/core/event_bus/: BUILD  event.h  event_bus.cpp  event_bus.h  listener_publisher.h
src/frontend/: BUILD  imgui_frontend.cpp  imgui_frontend.h  layer.h  layer_stack.cpp  layer_stack.h
src/frontend/debug_gui/: BUILD  debug_gui.cpp  debug_gui.h
src/frontend/ping/: BUILD  imgui.ini  ping_gui.cpp  ping_gui.h
src/ping/: ping_gui.cpp  ping_gui.h
test/core/event_bus/: BUILD  channel_test.cpp  event_bus_system_test.cpp  event_test.cpp  listener_test.cpp  publisher_test.cpp
